--- a/_data/team.yml
+++ b/_data/team.yml
@@ -1,24 +1,24 @@
 # Project team members listed below will appear on the /team page
 
-- name: Philip J. Fry
-  role: Delivery boy # Will appear next to name
-  image: assets/img/fry_ethan-hoover-311143-unsplash.jpg # Can be external link
+- name: Dr. Christian Chwala
+  role: Postdoc and project coordinator # Will appear next to name
+  image: assets/img/team_photo_chwala.jpg # Can be external link
   description: > # Can be Markdown
-    Protagonist, from the 20th century. Many times great-uncle to Professor Hubert Farnsworth.
-  orcid: 0000-0000-0000-0000
-  email: your.email@example.com
-  github: github_name
-  twitter: twitter_name
+    Responsible for extending the CML data acquisition system and the data processing capabilities at KIT.
+  orcid: 0000-0002-4583-3327
+  email: christian.chwala@kit.edu
+  github: cchwala
+  twitter: cchwala
 
-- name: Turanga Leela
-  role: Captain
+- name: Prof. Dr. Harald Kunstman
+  role: Project PI at KIT
   image: assets/img/leela_artem-kovalev-1403404-unsplash.jpg
   description: >
     Mutant cyclops. Leela is spaceship captain, pilot, and head of all 
     aviation services on board the [Planet Express Ship](https://en.wikipedia.org/wiki/Planet_Express_Ship). 
 
-- name: Professor Hubert J. Farnsworth
-  role: CEO & Owner
+- name: Dr. Uwe Siart
+  role: Project PI at TUM
   image: assets/img/farnsworth_angelo-abear-1662775-unsplash.jpg
   description: >
     Many times great-nephew of Fry. Tenured professor of [Mars University](https://en.wikipedia.org/wiki/Mars_University).
