--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,16 +6,7 @@
   href: /about/
 - text: Team
   href: /team/
-- text: Output
-  menu: # Dropdown menu (one level deep only)
-  - text: Page 1
-    href: /there-is-no-page-for-this-permalink/
-  - text: Page 2
-    href: /about/
-  - text: "---" # Divider to separate blocks of menu items (at least 3 "-")
-  - text: "Dropdown header" # Title for block of menu items
-  - text: External link
-    href: https://github.com/peterdesmet/petridish/blob/master/_data/navigation.yml
-    new_window: true
+- text: Publications
+  href: /publications
 - text: News
   href: /blog/
