Added all PIs to team site

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -11,14 +11,63 @@
   twitter: cchwala
 
 - name: Prof. Dr. Harald Kunstman
-  role: Project PI at KIT
+  role: Project PI at Karlsruhe Institute of Technology (KIT), Campus Alpin, Germany
   image: assets/img/leela_artem-kovalev-1403404-unsplash.jpg
   description: >
-    Mutant cyclops. Leela is spaceship captain, pilot, and head of all 
-    aviation services on board the [Planet Express Ship](https://en.wikipedia.org/wiki/Planet_Express_Ship). 
+    Professor for [Regional Climate and Hydrology at the University of Augsurg](https://www.uni-augsburg.de/en/fakultaet/fai/geo/prof/georkl/uber-uns/h-kunstmann/) 
+    and head of the department [Regional Climate Systems](https://www.imk-ifu.kit.edu/english/regional-climate-systems.php).
 
 - name: Dr. Uwe Siart
-  role: Project PI at TUM
-  image: assets/img/farnsworth_angelo-abear-1662775-unsplash.jpg
+  role: Project PI at TU Munich (TUM), Germany
+  image: assets/img/leela_artem-kovalev-1403404-unsplash.jpg
   description: >
-    Many times great-nephew of Fry. Tenured professor of [Mars University](https://en.wikipedia.org/wiki/Mars_University).
+    [...add text](https://www.ei.tum.de/en/hft/people/scientific-staff/uwe-siart/)
+
+- name: Prof. Dr. Anan Jayyousi
+  role: Project PI at An-Najah National University (ANU), Nablus, Palestine
+  image: assets/img/leela_artem-kovalev-1403404-unsplash.jpg
+  description: >
+    ... add text
+
+- name: Dr. Sameer Shadeed
+  role: Project PI at An-Najah National University (ANU), Nablus, Palestine
+  image: assets/img/leela_artem-kovalev-1403404-unsplash.jpg
+  description: >
+    ... add text
+
+- name: Prof. Dr. Hagit Messer
+  role: Project PI at Tel Aviv University (TAU), Tel Aviv, Israel
+  image: assets/img/leela_artem-kovalev-1403404-unsplash.jpg
+  description: >
+    ... add text
+
+- name: Prof. Dr. Pinhas Alpert, Tel Aviv University (TAU), Tel Aviv, Israel
+  role: Project PI at Tel Aviv University (TAU), Tel Aviv, Israel
+  image: assets/img/leela_artem-kovalev-1403404-unsplash.jpg
+  description: >
+    ... add text
+
+- name: Dr. Alon Rimmer
+  role: Project PI at Kinneret Limnological Laboratory (KLL), Migdal, Israel
+  image: assets/img/leela_artem-kovalev-1403404-unsplash.jpg
+  description: >
+    ... add text
+
+- name: Dr. Erick Fredj
+  role: Project PI at The Jerusalem College of Technology (JCT), Jerusalem, Israel
+  image: assets/img/leela_artem-kovalev-1403404-unsplash.jpg
+  description: >
+    ... add text
+
+- name: Dr. Amir Givati
+  role: Associated partern at Israel Hydrological Service (IHS), Jerusalem, Israel
+  image: assets/img/leela_artem-kovalev-1403404-unsplash.jpg
+  description: >
+    ... add text
+
+- name: Dr. Jörg Seltmann
+  role: Associated partern at German Weather Service (DWD), Hoher Peißenberg, Germany
+  image: assets/img/leela_artem-kovalev-1403404-unsplash.jpg
+  description: >
+    ... add text
+    
