--- a/_data/team.yml
+++ b/_data/team.yml
@@ -53,7 +53,7 @@
   description: >
     ... add text
 
-- name: Dr. Erick Fredj
+- name: Prof. Dr. Erick Fredj
   role: Project PI at The Jerusalem College of Technology (JCT), Jerusalem, Israel
   image: assets/img/leela_artem-kovalev-1403404-unsplash.jpg
   description: >
@@ -70,4 +70,3 @@
   image: assets/img/leela_artem-kovalev-1403404-unsplash.jpg
   description: >
     ... add text
-    
