--- a/_data/team.yml
+++ b/_data/team.yml
@@ -28,7 +28,7 @@
   role: Project PI at Tel Aviv University (TAU), Tel Aviv, Israel
   image: assets/img/team_photo/messer.png
 
-- name: Prof. Dr. Pinhas Alpert, Tel Aviv University (TAU), Tel Aviv, Israel
+- name: Prof. Dr. Pinhas Alpert
   role: Project PI at Tel Aviv University (TAU), Tel Aviv, Israel
   image: assets/img/team_photo/alpert.png
 
